A lot of fine tuning to better match the comp.

--- a/src/listings.html
+++ b/src/listings.html
@@ -48,8 +48,7 @@
         <div class="header">
           <h4>LOREM IPSUM DOLOR SIT AMET</h4>
           <p>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
           </p>
           <input type="text" placeholder="Search properties">
           <div class="submenu">
@@ -67,7 +66,7 @@
             </div>
             <div class="content">
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               </p>
               <div class="amenities">
                 <p><img src="images/icons/door.png" /> 3 Rooms</p>
@@ -90,7 +89,7 @@
             </div>
             <div class="content">
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               </p>
               <div class="amenities">
                 <p><img src="images/icons/door.png" /> 3 Rooms</p>
@@ -113,7 +112,7 @@
             </div>
             <div class="content">
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               </p>
               <div class="amenities">
                 <p><img src="images/icons/door.png" /> 3 Rooms</p>
@@ -138,7 +137,7 @@
             </div>
             <div class="content">
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               </p>
               <div class="amenities">
                 <p><img src="images/icons/door.png" /> 3 Rooms</p>
@@ -161,7 +160,7 @@
             </div>
             <div class="content">
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               </p>
               <div class="amenities">
                 <p><img src="images/icons/door.png" /> 3 Rooms</p>
@@ -184,7 +183,7 @@
             </div>
             <div class="content">
               <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
               </p>
               <div class="amenities">
                 <p><img src="images/icons/door.png" /> 3 Rooms</p>
