Begin setting up contact-us modal.

--- a/src/listings.html
+++ b/src/listings.html
@@ -30,6 +30,14 @@
   <body>
     <div id="container-listings">
       <img src="images/logo.png" class="logo-upper-left"/>
+      <div class="contact-us-modal">
+        <div class="contact-form">
+          <h3>CONTACT US</h3>
+          <input type="text" placeholder="Name">
+          <input type="text" placeholder="Address">
+          <input type="text" placeholder="Email">
+        </div>
+      </div>
       <div class="ham-menu"></div>
       <div class="nav-modal">
         <div class="inner">
