--- a/src/about.html
+++ b/src/about.html
@@ -44,18 +44,18 @@
             <img class="image-left" src="images/about/hero.jpg" />
           </div>
           <div class="description">
-            <div class="title head-title">ABOUT <span class="small-hidden">GROUND</span><span class="small-hidden">SOURCE</span></div>
+            <div class="title head-title">ABOUT GROUNDSOURCE</div>
             <p>
               GROUNDSOURCE is a Los Angeles-based full service real estate firm that specializes
               in representing tenants, landlords, and investors. Our forty-five year of collective
-              experience in the L.A. marketplace lets us combine extensive insider knowledge with 
+              experience in the L.A. marketplace lets us combine extensive insider knowledge with
               trusted partnerships to create unparalleled value. We're a boutique firm that offers
               clients the prestigious service they deserve with an intimate, hands-on approach.
               <br><br>
               We believe it isn't just about satisfied clients, it's about repeat clients.
               Therefore, we always spend as much time as it takes to close the deal the right way.
-              For us, good business is about a connection, not a commission which is why at 
-              GROUNDSOURCE we're by your side from the fact-finding to the lease signing and every 
+              For us, good business is about a connection, not a commission which is why at
+              GROUNDSOURCE we're by your side from the fact-finding to the lease signing and every
               step along the way.
             </p>
           </div>
