Include untracked files.

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
         <img src="images/logo.png" class="modal-logo"/>
         <div class="menu-close"></div>
         <ul class="nav">
-          <li><a href="/">HOME</a></li>
-          <li><a class="active" href="/about.html">ABOUT</a></li>
+          <li><a class="active" href="/">HOME</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
           <li><a href="/listings.html">LISTINGS</a></li>
           <li><a href="#">PROJECTS</a></li>
           <li><a href="#">CONTACT</a></li>
