setup modal.... editor acting very funny.

--- a/src/listings.html
+++ b/src/listings.html
@@ -33,9 +33,11 @@
       <div class="contact-us-modal">
         <div class="contact-form">
           <h3>CONTACT US</h3>
-          <input type="text" placeholder="Name">
-          <input type="text" placeholder="Address">
-          <input type="text" placeholder="Email">
+          <div class="form">
+            <input type="text" placeholder="Name">
+            <input type="text" placeholder="Address">
+            <input type="text" placeholder="Email">
+          </div>
         </div>
       </div>
       <div class="ham-menu"></div>
