--- a/src/listings.html
+++ b/src/listings.html
@@ -32,11 +32,13 @@
       <img src="images/logo.png" class="logo-upper-left"/>
       <div class="contact-us-modal">
         <div class="contact-form">
-          <h3>CONTACT US</h3>
+          <div class="contact-close"><span>X</span></div>
           <div class="form">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Address">
-            <input type="text" placeholder="Email">
+            <p>CONTACT US</p>
+            <input type="text" placeholder=" Name">
+            <input type="text" placeholder=" Address">
+            <input type="text" placeholder=" Email">
+            <button>SUBMIT</button>
           </div>
         </div>
       </div>
@@ -50,7 +52,7 @@
             <li><a href="/about.html">ABOUT</a></li>
             <li><a class="active" href="/listings.html">LISTINGS</a></li>
             <li><a href="#">EXPERIENCE</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a class="contact-us-link">CONTACT</a></li>
           </ul>
         </div>
       </div>
@@ -60,7 +62,7 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
           </p>
-          <input type="text" placeholder="Search properties">
+          <input type="text" placeholder="Search properties" class="orange-placeholder">
           <div class="submenu">
             <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES
           </div>
@@ -250,6 +252,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(document).ready(function(){
+        $('.contact-close').click(function() {
+          $('.contact-us-modal').fadeToggle();
+        });
+        $('.contact-us-link').click(function() {
+          $('.nav-modal').fadeToggle();
+          $('.contact-us-modal').fadeToggle();
+        });
         $('.ham-menu, .menu-close').click(function(){
           $('.nav-modal').fadeToggle();
         });
