--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,24 @@
     });</script>
   </head>
   <body>
-     <div id="top-nav">
+    <div class="contact-us-modal">
+      <div class="contact-form">
+        <div class="contact-close"><span>X</span></div>
+        <div class="form">
+          <p class="contact-us">CONTACT US</p>
+          <input type="text" placeholder=" Name">
+          <input type="text" placeholder=" Address">
+          <input type="text" placeholder=" Email">
+          <button>SUBMIT</button>
+        </div>
+      </div>
+    </div>
+    <div id="top-nav">
       <ul>
         <li><a href="/listings.html">LISTINGS</a></li>
         <li><a href="/experience.html">EXPERIENCE</a></li>
         <li><a href="/about.html">ABOUT</a</li>
-        <li><a href="#">CONTACT<a/></li>
+        <li><a class="contact-us-link">CONTACT</a></li>
       </ul>
     </div>
     <div class="ham-menu"></div>
@@ -46,7 +58,7 @@
           <li><a href="/about.html">ABOUT</a></li>
           <li><a href="/listings.html">LISTINGS</a></li>
           <li><a href="#">EXPERIENCE</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -196,6 +208,13 @@
           window.scrollTo(0, $('#header-home').height());
         });
 
+        $('.contact-close').click(function() {
+          $('.contact-us-modal').fadeToggle();
+        });
+        $('.contact-us-link').click(function() {
+          $('.contact-us-modal').fadeToggle();
+          $('.nav-modal').fadeOut();
+        });
         $('.ham-menu, .menu-close').click(function(){
           $('.nav-modal').fadeToggle();
         });
