Fix weird border issues with the input boxes --- solution is to make sure border-style is declared on the input, thanks Matt!

--- a/src/listings.html
+++ b/src/listings.html
@@ -62,7 +62,7 @@
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
           </p>
-          <input type="text" placeholder="Search properties" class="orange-placeholder">
+          <input type="text" placeholder="    Search properties" class="listings-search">
           <div class="submenu">
             <div class="plus-sign">+</div>LOOKING FOR CERTAIN FEATURES
           </div>
