Mostly finish about-us modal... some cleaning up to do.

--- a/src/about.html
+++ b/src/about.html
@@ -38,6 +38,31 @@
       </div>
     </div>
     <div id="container-about">
+      <div class="agent-details">
+        <div class="content">
+          <img src="images/about/agent-bio.png" class="bio-pic" />
+          <div class="contact">
+            <h4>JONATHAN DOE</h4>
+            <p>Licensed Real Estate Salesperson</p>
+            <p><a href="mailto:jonathan@groundsource.com">jonathan@groundsource.com</a>></p>
+            <p>M: 310.333.3333</p>
+
+            <button class="rounded-red-button">WORK WITH JONATHAN</buton>
+          </div>
+          <div class="bio">
+            <h2>ABOUT JONATHAN</h2>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+          </div>
+          <div class="footer">
+            <p>FEATURED LISTINGS</p>
+            <div class="featured-listings">
+              <img src="images/about/prop1.png" class="agent-featured-listing"/>
+              <img src="images/about/prop2.png" class="agent-featured-listing"/>
+              <img src="images/about/prop3.png" class="agent-featured-listing"/>
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="header-about">
         <div class="about-text">
           <div class="header-image">
