Formatted agent modal for mobile....  some weird scrolling issues that still need to be resolved.

--- a/src/about.html
+++ b/src/about.html
@@ -39,12 +39,13 @@
     </div>
     <div id="container-about">
       <div class="agent-details">
+        <div class="simple-close close-agent-detail">X</div>
         <div class="content">
           <div class="header">
-            <div class="simple-close close-agent-detail">X</div>
-            <img src="images/about/agent-bio.png" class="bio-pic" />
+              <img src="images/about/agent-bio.png" class="bio-pic"/>
             <div class="contact">
               <h4>JONATHAN DOE</h4>
+               <img src="images/about/agent-bio.png" class="bio-pic-mobile"/>
               <p>Licensed Real Estate Salesperson</p>
               <p><a href="mailto:jonathan@groundsource.com">jonathan@groundsource.com</a>></p>
               <p>M: 310.333.3333</p>
