--- a/src/about.html
+++ b/src/about.html
@@ -39,10 +39,10 @@
     </div>
     <div id="container-about">
       <div class="agent-details">
-        <div class="simple-close close-agent-detail">X</div>
         <div class="content">
+          <div class="simple-close close-agent-detail">X</div>
           <div class="header">
-              <img src="images/about/agent-bio.png" class="bio-pic"/>
+            <img src="images/about/agent-bio.png" class="bio-pic"/>
             <div class="contact">
               <h4>JONATHAN DOE</h4>
                <img src="images/about/agent-bio.png" class="bio-pic-mobile"/>
@@ -67,110 +67,112 @@
           </div>
         </div>
       </div>
-      <div id="header-about">
-        <div class="about-text">
-          <div class="header-image">
-            <img class="image-left" src="images/about/hero.jpg" />
-          </div>
-          <div class="description">
-            <div class="title head-title">ABOUT GROUNDSOURCE</div>
-            <p>
-              GROUNDSOURCE is a Los Angeles-based full service real estate firm that specializes
-              in representing tenants, landlords, and investors. Our forty-five year of collective
-              experience in the L.A. marketplace lets us combine extensive insider knowledge with
-              trusted partnerships to create unparalleled value. We're a boutique firm that offers
-              clients the prestigious service they deserve with an intimate, hands-on approach.
-              <br><br>
-              We believe it isn't just about satisfied clients, it's about repeat clients.
-              Therefore, we always spend as much time as it takes to close the deal the right way.
-              For us, good business is about a connection, not a commission which is why at
-              GROUNDSOURCE we're by your side from the fact-finding to the lease signing and every
-              step along the way.
-            </p>
+      <div class="main">
+        <div id="header-about">
+          <div class="about-text">
+            <div class="header-image">
+              <img class="image-left" src="images/about/hero.jpg" />
+            </div>
+            <div class="description">
+              <div class="title head-title">ABOUT GROUNDSOURCE</div>
+              <p>
+                GROUNDSOURCE is a Los Angeles-based full service real estate firm that specializes
+                in representing tenants, landlords, and investors. Our forty-five year of collective
+                experience in the L.A. marketplace lets us combine extensive insider knowledge with
+                trusted partnerships to create unparalleled value. We're a boutique firm that offers
+                clients the prestigious service they deserve with an intimate, hands-on approach.
+                <br><br>
+                We believe it isn't just about satisfied clients, it's about repeat clients.
+                Therefore, we always spend as much time as it takes to close the deal the right way.
+                For us, good business is about a connection, not a commission which is why at
+                GROUNDSOURCE we're by your side from the fact-finding to the lease signing and every
+                step along the way.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="agents">
-        <div class="flexbox">
-          <div class="agent">
-            <div class="bio-image">
-              <img src="images/about/agent-01.jpg"/>
-              <div class="image-title"><span>JONATHAN</span> DOE</div>
+        <div class="agents">
+          <div class="flexbox">
+            <div class="agent">
+              <div class="bio-image">
+                <img src="images/about/agent-01.jpg"/>
+                <div class="image-title"><span>JONATHAN</span> DOE</div>
+              </div>
+              <div class="short-bio">
+                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              </div>
+              <div class="bio-button">VIEW FULL BIO</div>
+              <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
             </div>
-            <div class="short-bio">
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </div>
-            <div class="bio-button">VIEW FULL BIO</div>
-            <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
-          </div>
 
-          <div class="agent">
-            <div class="bio-image">
-              <img src="images/about/agent-02.jpg"/>
-              <div class="image-title"><span>JANE</span> DOE</div>
+            <div class="agent">
+              <div class="bio-image">
+                <img src="images/about/agent-02.jpg"/>
+                <div class="image-title"><span>JANE</span> DOE</div>
+              </div>
+              <div class="short-bio">
+                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              </div>
+              <div class="bio-button">VIEW FULL BIO</div>
+              <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
             </div>
-            <div class="short-bio">
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </div>
-            <div class="bio-button">VIEW FULL BIO</div>
-            <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
-          </div>
 
-          <div class="agent">
-            <div class="bio-image">
-              <img src="images/about/agent-03.jpg"/>
-              <div class="image-title"><span>JONATHAN</span> DOE</div>
+            <div class="agent">
+              <div class="bio-image">
+                <img src="images/about/agent-03.jpg"/>
+                <div class="image-title"><span>JONATHAN</span> DOE</div>
+              </div>
+              <div class="short-bio">
+                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+              </div>
+              <div class="bio-button">VIEW FULL BIO</div>
+              <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
             </div>
-            <div class="short-bio">
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-              Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-            </div>
-            <div class="bio-button">VIEW FULL BIO</div>
-            <div class="bio-contact"><span class="black">agent@groundsource.com</span><br>M:310.333.3333</div>
           </div>
         </div>
-      </div>
-      <div id="about-content">
-        <div class="section-header">
-          <div class="title">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR</div>
-        </div>
-        <div class="section-content">
-          <div class="about">
-            <img src="images/about/about.jpg" class="about-pic"/>
-            <img src="images/about/map.png" class="map" />
+        <div id="about-content">
+          <div class="section-header">
+            <div class="title">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR</div>
+          </div>
+          <div class="section-content">
+            <div class="about">
+              <img src="images/about/about.jpg" class="about-pic"/>
+              <img src="images/about/map.png" class="map" />
+            </div>
           </div>
         </div>
-      </div>
-      <div id="footer">
-        <div class="column">
-          <div class="title">LISTINGS</div>
-          <a href="#">Properties For Sale</a>
-          <a href="#">Properties For Lease</a>
-        </div>
-        <div class="column">
-          <div class="title">EXPERIENCE</div>
-          <a href="#">Case Studies</a>
-          <a href="#">Testimonials</a>
-        </div>
-        <div class="column">
-          <div class="title">ABOUT</div>
-          <a href="#">Meet the Team</a>
-        </div>
-        <div class="column">
-          <div class="title">CONTACT</div>
-        </div>
-        <div class="column social">
-          <a href="#" target="_blank">
-            <img src="images/social/i.svg"/>
-          </a>
-          <a href="#" target="_blank">
-            <img src="images/social/t.svg"/>
-          </a>
-          <a href="#" target="_blank">
-            <img src="images/social/f.svg"/>
-          </a>
+        <div id="footer">
+          <div class="column">
+            <div class="title">LISTINGS</div>
+            <a href="#">Properties For Sale</a>
+            <a href="#">Properties For Lease</a>
+          </div>
+          <div class="column">
+            <div class="title">EXPERIENCE</div>
+            <a href="#">Case Studies</a>
+            <a href="#">Testimonials</a>
+          </div>
+          <div class="column">
+            <div class="title">ABOUT</div>
+            <a href="#">Meet the Team</a>
+          </div>
+          <div class="column">
+            <div class="title">CONTACT</div>
+          </div>
+          <div class="column social">
+            <a href="#" target="_blank">
+              <img src="images/social/i.svg"/>
+            </a>
+            <a href="#" target="_blank">
+              <img src="images/social/t.svg"/>
+            </a>
+            <a href="#" target="_blank">
+              <img src="images/social/f.svg"/>
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -182,9 +184,11 @@
         });
         $('.close-agent-detail').click(function() {
           $('.agent-details').fadeOut();
+          $('.main').removeClass('mobile-bg-hide');
         })
         $('.bio-button').click(function() {
           $('.agent-details').fadeIn();
+          $('.main').addClass('mobile-bg-hide');
         })
     });
     </script>
