--- a/src/about.html
+++ b/src/about.html
@@ -40,7 +40,7 @@
     <div id="container-about">
       <div class="agent-details">
         <div class="content">
-          <div class="simple-close close-agent-detail">X</div>
+          <div class="simple-close"></div>
           <div class="header">
             <img src="images/about/agent-bio.png" class="bio-pic"/>
             <div class="contact">
