Add copyright to footer. Fixes footer on mobile. Fixes agent-modal close button.

--- a/src/about.html
+++ b/src/about.html
@@ -40,7 +40,7 @@
     <div id="container-about">
       <div class="agent-details">
         <div class="content">
-          <div class="simple-close"></div>
+          <div class="simple-close close-agent-detail"></div>
           <div class="header">
             <img src="images/about/agent-bio.png" class="bio-pic"/>
             <div class="contact">
@@ -162,6 +162,7 @@
           <div class="column">
             <div class="title">CONTACT</div>
           </div>
+
           <div class="column social">
             <a href="#" target="_blank">
               <img src="images/social/i.svg"/>
@@ -172,6 +173,9 @@
             <a href="#" target="_blank">
               <img src="images/social/f.svg"/>
             </a>
+          </div>
+          <div class="column copyright">
+            COPYRIGHT &copy; GROUNDSOURCE
           </div>
         </div>
       </div>
