Fix social media icons on mobile footer.

--- a/src/about.html
+++ b/src/about.html
@@ -145,37 +145,39 @@
           </div>
         </div>
         <div id="footer">
-          <div class="column">
-            <div class="title">LISTINGS</div>
-            <a href="#">Properties For Sale</a>
-            <a href="#">Properties For Lease</a>
-          </div>
-          <div class="column">
-            <div class="title">EXPERIENCE</div>
-            <a href="#">Case Studies</a>
-            <a href="#">Testimonials</a>
-          </div>
-          <div class="column">
-            <div class="title">ABOUT</div>
-            <a href="#">Meet the Team</a>
-          </div>
-          <div class="column">
-            <div class="title">CONTACT</div>
-          </div>
+          <div class="inner">
+            <div class="column">
+              <div class="title">LISTINGS</div>
+              <a href="#">Properties For Sale</a>
+              <a href="#">Properties For Lease</a>
+            </div>
+            <div class="column">
+              <div class="title">EXPERIENCE</div>
+              <a href="#">Case Studies</a>
+              <a href="#">Testimonials</a>
+            </div>
+            <div class="column">
+              <div class="title">ABOUT</div>
+              <a href="#">Meet the Team</a>
+            </div>
+            <div class="column">
+              <div class="title">CONTACT</div>
+            </div>
 
-          <div class="column social">
-            <a href="#" target="_blank">
-              <img src="images/social/i.svg"/>
-            </a>
-            <a href="#" target="_blank">
-              <img src="images/social/t.svg"/>
-            </a>
-            <a href="#" target="_blank">
-              <img src="images/social/f.svg"/>
-            </a>
-          </div>
-          <div class="column copyright">
-            COPYRIGHT &copy; GROUNDSOURCE
+            <div class="column social">
+              <a href="#" target="_blank">
+                <img src="images/social/i.svg"/>
+              </a>
+              <a href="#" target="_blank">
+                <img src="images/social/t.svg"/>
+              </a>
+              <a href="#" target="_blank">
+                <img src="images/social/f.svg"/>
+              </a>
+            </div>
+            <div class="column copyright">
+              COPYRIGHT &copy; GROUNDSOURCE
+            </div>
           </div>
         </div>
       </div>
