--- a/src/about.html
+++ b/src/about.html
@@ -22,31 +22,33 @@
     <!-- endbuild -->
   </head>
   <body>
-    <img src="images/logo.png" class="logo-upper-left"/>
-    <div class="contact-us-modal">
-      <div class="contact-form">
-        <div class="contact-close"><span>X</span></div>
-        <div class="form">
-          <p>CONTACT US</p>
-          <input type="text" placeholder=" Name">
-          <input type="text" placeholder=" Address">
-          <input type="text" placeholder=" Email">
-          <button>SUBMIT</button>
+    <div id="about-header">
+      <img src="images/logo.png" class="logo-upper-left"/>
+      <div class="contact-us-modal">
+        <div class="contact-form">
+          <div class="contact-close"><span>X</span></div>
+          <div class="form">
+            <p>CONTACT US</p>
+            <input type="text" placeholder=" Name">
+            <input type="text" placeholder=" Address">
+            <input type="text" placeholder=" Email">
+            <button>SUBMIT</button>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="ham-menu"></div>
-    <div class="nav-modal">
-      <div class="inner">
-        <img src="images/logo.png" class="modal-logo"/>
-        <div class="menu-close"></div>
-        <ul class="nav">
-          <li><a href="/">HOME</a></li>
-          <li><a class="active" href="/about.html">ABOUT</a></li>
-          <li><a href="/listings.html">LISTINGS</a></li>
-          <li><a href="#">PROJECTS</a></li>
-          <li><a class="contact-us-link">CONTACT</a></li>
-        </ul>
+      <div class="ham-menu"></div>
+      <div class="nav-modal">
+        <div class="inner">
+          <img src="images/logo.png" class="modal-logo"/>
+          <div class="menu-close"></div>
+          <ul class="nav">
+            <li><a href="/">HOME</a></li>
+            <li><a class="active" href="/about.html">ABOUT</a></li>
+            <li><a href="/listings.html">LISTINGS</a></li>
+            <li><a href="#">PROJECTS</a></li>
+            <li><a class="contact-us-link">CONTACT</a></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div id="container-about">
