--- a/src/listings.html
+++ b/src/listings.html
@@ -70,11 +70,13 @@
         <div class="flexbox listings">
           <div class="listing-preview">
             <div class="header">
-              <div class="label">RENT</div>
-              <div class="address">
-                <div>2467 JEFFERSON AVE,</div>
-                <div><strong>PLAYA</strong> VISTA</div>
-              </div>
+              <a href="listing.html">
+                <div class="label">RENT</div>
+                <div class="address">
+                  <div>2467 JEFFERSON AVE,</div>
+                  <div><strong>PLAYA</strong> VISTA</div>
+                </div>
+              </a>
             </div>
             <div class="content">
               <p>
