--- a/src/index.html
+++ b/src/index.html
@@ -215,6 +215,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $('.review-carousel').slick({
