--- a/src/listing.html
+++ b/src/listing.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -22,6 +23,41 @@
     <!-- endbuild -->
   </head>
   <body>
+    <div class="contact-us-modal">
+      <div class="contact-form">
+        <div class="contact-close"><span>X</span></div>
+        <div class="form">
+          <p class="contact-us">CONTACT US</p>
+          <input type="text" placeholder=" Name">
+          <input type="text" placeholder=" Address">
+          <input type="text" placeholder=" Email">
+          <button>SUBMIT</button>
+        </div>
+      </div>
+    </div>
+    <div id="top-nav">
+      <ul>
+        <li><a href="/listings.html">LISTINGS</a></li>
+        <li><a href="/experience.html">EXPERIENCE</a></li>
+        <li><a href="/about.html">ABOUT</a</li>
+        <li><a class="contact-us-link">CONTACT</a></li>
+      </ul>
+    </div>
+    <div class="ham-menu"></div>
+    <div class="nav-modal">
+      <div class="inner">
+        <img src="images/logo.png" class="modal-logo"/>
+        <div class="menu-close"></div>
+        <ul class="nav">
+          <li><a class="active" href="/">HOME</a></li>
+          <li><a href="/about.html">ABOUT</a></li>
+          <li><a href="/listings.html">LISTINGS</a></li>
+          <li><a href="#">EXPERIENCE</a></li>
+          <li><a class="contact-us-link">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+
     <!-- <img src="images/background.png" id="background-header" /> -->
     <div id="container-listing" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
@@ -95,12 +131,21 @@
                 the street from all of the amenitite at Runway Playa Vista.
                 </p>
               </div>
-              <div class="info-image-gallery">
+              <!-- <div class="listing-image-gallery">
                 <img src="images/example.jpg" class="img-responsive"/>
                 <div class="gallery-controls">
                   <img id="gallery-arrow-left" src="images/listings-arrow-lft.png" />
                   <img id="gallery-arrow-right" src="images/listings-arrow-rt.png" />
                 </div>
+              </div> -->
+              <div class="listing-image-gallery">
+                <div class="listing-carousel">
+                  <img src="images/example.jpg" class="img-responsive"/>
+                  <img src="images/example.jpg" class="img-responsive"/>
+                  <img src="images/example.jpg" class="img-responsive"/>
+                </div>
+                <img class="gallery-arrow-left gallery-navigation" src="images/listings-arrow-lft.png" />
+                <img class="gallery-arrow-right gallery-navigation" src="images/listings-arrow-rt.png" />
               </div>
             </div>
             <div class="info-box">
@@ -154,12 +199,18 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $('.ham-menu, .menu-close').click(function(){
           $('.nav-modal').fadeToggle();
         });
-    });
+        $('.listing-carousel').slick({
+          "prevArrow": $('.gallery-arrow-left'),
+          "nextArrow": $('.gallery-arrow-right')
+        })
+      });
     </script>
 
     <!-- build:js(src) scripts/vendor.js -->
