--- a/src/about.html
+++ b/src/about.html
@@ -158,7 +158,7 @@
             </div>
           </div>
         </div>
-        <div id="footer">
+        <div class="footer">
           <div class="inner">
             <div class="column">
               <div class="title">LISTINGS</div>
