Fix responsiveness of listing page.

--- a/src/listing.html
+++ b/src/listing.html
@@ -37,6 +37,7 @@
     </div>
     <div id="top-nav">
       <ul>
+        <li><a href="/index.html">HOME</a></li>
         <li><a href="/listings.html">LISTINGS</a></li>
         <li><a href="/experience.html">EXPERIENCE</a></li>
         <li><a href="/about.html">ABOUT</a</li>
