--- a/src/listings.html
+++ b/src/listings.html
@@ -258,18 +258,5 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $('.contact-close').click(function() {
-          $('.contact-us-modal').fadeToggle();
-        });
-        $('.contact-us-link').click(function() {
-          $('.nav-modal').fadeToggle();
-          $('.contact-us-modal').fadeToggle();
-        });
-        $('.ham-menu, .menu-close').click(function(){
-          $('.nav-modal').fadeToggle();
-        });
-    });
-    </script>
+    <script type="text/javascript" src="scripts/script.js"></script>
   </body>
