--- a/src/about.html
+++ b/src/about.html
@@ -197,11 +197,9 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
-        $('.ham-menu, .menu-close').click(function(){
-          $('.nav-modal').fadeToggle();
-        });
         $('.close-agent-detail').click(function() {
           $('.agent-details').fadeOut();
           $('.main').removeClass('mobile-bg-hide');
@@ -210,13 +208,6 @@
           $('.agent-details').fadeIn();
           $('.main').addClass('mobile-bg-hide');
         })
-        $('.contact-close').click(function() {
-          $('.contact-us-modal').fadeToggle();
-        });
-        $('.contact-us-link').click(function() {
-          $('.nav-modal').fadeToggle();
-          $('.contact-us-modal').fadeToggle();
-        });
     });
     </script>
   </body>
