--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <li><a class="contact-us-link">CONTACT</a></li>
       </ul>
     </div>
-    <div class="ham-menu"></div>
+    <div class="ham-menu ham-menu-home"></div>
     <div class="nav-modal">
       <div class="inner">
         <img src="images/logo.png" class="modal-logo"/>
