--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@
     </div>
     <div id="top-nav">
       <ul>
-        <li><a href="/listings.html">LISTINGS</a></li>
-        <li><a href="/experience.html">EXPERIENCE</a></li>
-        <li><a href="/about.html">ABOUT</a</li>
+        <li><a href="listings.html">LISTINGS</a></li>
+        <li><a href="experience.html">EXPERIENCE</a></li>
+        <li><a href="about.html">ABOUT</a</li>
         <li><a class="contact-us-link">CONTACT</a></li>
       </ul>
     </div>
@@ -56,8 +56,8 @@
         <div class="menu-close"></div>
         <ul class="nav">
           <li><a class="active" href="/">HOME</a></li>
-          <li><a href="/about.html">ABOUT</a></li>
-          <li><a href="/listings.html">LISTINGS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="listings.html">LISTINGS</a></li>
           <li><a href="#">EXPERIENCE</a></li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
