Remove / from links.. temporarily place js inline.

--- a/src/about.html
+++ b/src/about.html
@@ -42,9 +42,9 @@
           <img src="images/logo.png" class="modal-logo"/>
           <div class="menu-close"></div>
           <ul class="nav">
-            <li><a href="/">HOME</a></li>
-            <li><a class="active" href="/about.html">ABOUT</a></li>
-            <li><a href="/listings.html">LISTINGS</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a class="active" href="about.html">ABOUT</a></li>
+            <li><a href="listings.html">LISTINGS</a></li>
             <li><a href="#">PROJECTS</a></li>
             <li><a class="contact-us-link">CONTACT</a></li>
           </ul>
@@ -200,6 +200,32 @@
     <script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
+        $(window).scroll(function() {
+    if (window.pageYOffset >= 67) {
+      $('#top-nav').hide();
+      $('.ham-menu-home').show();
+    }
+    if (window.pageYOffset < 67) {
+      $('#top-nav').show();
+      $('.ham-menu-home').hide();
+    }
+  })
+  $(".scroll-arrow").click(function() {
+    window.scrollTo(0, $('#header-home').height());
+  });
+
+  $('.contact-close').click(function() {
+    $('.contact-us-modal').fadeToggle();
+  });
+
+  $('.contact-us-link').click(function() {
+    $('.contact-us-modal').fadeIn();
+    $('.nav-modal').fadeOut();
+  });
+
+  $('.ham-menu, .menu-close').click(function(){
+    $('.nav-modal').fadeToggle();
+  });
         $('.close-agent-detail').click(function() {
           $('.agent-details').fadeOut();
           $('.main').removeClass('mobile-bg-hide');
@@ -208,7 +234,10 @@
           $('.agent-details').fadeIn();
           $('.main').addClass('mobile-bg-hide');
         })
+
     });
     </script>
   </body>
 </html>
+
+
