--- a/src/listing.html
+++ b/src/listing.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -41,9 +41,9 @@
         <img src="images/logo.png" class="modal-logo"/>
         <div class="menu-close"></div>
         <ul class="nav">
-          <li><a class="active" href="/">HOME</a></li>
-          <li><a href="/about.html">ABOUT</a></li>
-          <li><a href="/listings.html">LISTINGS</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="listings.html" class="active">LISTINGS</a></li>
           <li><a href="#">EXPERIENCE</a></li>
           <li><a class="contact-us-link">CONTACT</a></li>
         </ul>
@@ -174,13 +174,39 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         $('.listing-carousel').slick({
           "prevArrow": $('.gallery-arrow-left'),
           "nextArrow": $('.gallery-arrow-right')
         })
+        $(window).scroll(function() {
+    if (window.pageYOffset >= 67) {
+      $('#top-nav').hide();
+      $('.ham-menu-home').show();
+    }
+    if (window.pageYOffset < 67) {
+      $('#top-nav').show();
+      $('.ham-menu-home').hide();
+    }
+  })
+  $(".scroll-arrow").click(function() {
+    window.scrollTo(0, $('#header-home').height());
+  });
+
+  $('.contact-close').click(function() {
+    $('.contact-us-modal').fadeToggle();
+  });
+
+  $('.contact-us-link').click(function() {
+    $('.contact-us-modal').fadeIn();
+    $('.nav-modal').fadeOut();
+  });
+
+  $('.ham-menu, .menu-close').click(function(){
+    $('.nav-modal').fadeToggle();
+  });
       });
     </script>
 
