--- a/src/listings.html
+++ b/src/listings.html
@@ -48,9 +48,9 @@
           <img src="images/logo.png" class="modal-logo"/>
           <div class="menu-close"></div>
           <ul class="nav">
-            <li><a href="/">HOME</a></li>
-            <li><a href="/about.html">ABOUT</a></li>
-            <li><a class="active" href="/listings.html">LISTINGS</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a class="active" href="listings.html">LISTINGS</a></li>
             <li><a href="#">EXPERIENCE</a></li>
             <li><a class="contact-us-link">CONTACT</a></li>
           </ul>
@@ -212,11 +212,11 @@
           </div>
         </div>
         <div class="paginator">
-          <div class="navigate"><-</div>
+          <div class="navigate">&lt;-</div>
           <div class="pages">
             <a href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="#">5</a><a href="#">6</a><a href="#">7</a><a href="#">...</a>
           </div>
-           <div class="navigate">-></div>
+           <div class="navigate">-&gt;</div>
         </div>
       </div>
     </div>
@@ -259,4 +259,34 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(window).scroll(function() {
+    if (window.pageYOffset >= 67) {
+      $('#top-nav').hide();
+      $('.ham-menu-home').show();
+    }
+    if (window.pageYOffset < 67) {
+      $('#top-nav').show();
+      $('.ham-menu-home').hide();
+    }
+  })
+  $(".scroll-arrow").click(function() {
+    window.scrollTo(0, $('#header-home').height());
+  });
+
+  $('.contact-close').click(function() {
+    $('.contact-us-modal').fadeToggle();
+  });
+
+  $('.contact-us-link').click(function() {
+    $('.contact-us-modal').fadeIn();
+    $('.nav-modal').fadeOut();
+  });
+
+  $('.ham-menu, .menu-close').click(function(){
+    $('.nav-modal').fadeToggle();
+  });
+    });
+    </script>
   </body>
