Use flexbox with max-width for index page.

--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
       <img src="images/scroll-arrow.png" class="scroll-arrow"/>
     </div>
     <div class="content">
-      <div class="flexbox-full">
+      <div class="flexbox">
         <div class="home-intro-left">
           <div>
             <div class="section-header">
