Set max width for review carousel on Desktop view. For mobile, add some padding so that the arrrows don't overlap the text.{

--- a/src/index.html
+++ b/src/index.html
@@ -89,55 +89,59 @@
         <div class="home-intro-right"></div>
       </div>
       <div class="review-slideshow">
-        <div class="navigation-arrow-left navigation-arrows"></div>
-        <div class="review-carousel">
-          <div class="review">
-            <img src="images/sample-person.png" />
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-              <br />
-              <br />
-              <strong>- Jane Doe 1</strong>
-            </p>
+        <div class="inner">
+          <div class="navigation-arrow-left navigation-arrows"></div>
+          <div class="carousel-container">
+            <div class="review-carousel">
+              <div class="review">
+                <img src="images/sample-person.png" />
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
+                  <br />
+                  <br />
+                  <strong>- Jane Doe 1</strong>
+                </p>
+              </div>
+              <div class="review">
+                <img src="images/sample-person.png" />
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
+                  <br />
+                  <br />
+                  <strong>- Jane Doe 2</strong>
+                </p>
+              </div>
+              <div class="review selected">
+                <img src="images/sample-person.png" />
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
+                  <br />
+                  <br />
+                  <strong>- Jane Doe 3</strong>
+                </p>
+              </div>
+              <div class="review">
+                <img src="images/sample-person.png" />
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
+                  <br />
+                  <br />
+                  <strong>- Jane Doe 4</strong>
+                </p>
+              </div>
+              <div class="review">
+                <img src="images/sample-person.png" />
+                <p>
+                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
+                  <br />
+                  <br />
+                  <strong>- Jane Doe 5</strong>
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="review">
-            <img src="images/sample-person.png" />
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-              <br />
-              <br />
-              <strong>- Jane Doe 2</strong>
-            </p>
-          </div>
-          <div class="review selected">
-            <img src="images/sample-person.png" />
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-              <br />
-              <br />
-              <strong>- Jane Doe 3</strong>
-            </p>
-          </div>
-          <div class="review">
-            <img src="images/sample-person.png" />
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-              <br />
-              <br />
-              <strong>- Jane Doe 4</strong>
-            </p>
-          </div>
-          <div class="review">
-            <img src="images/sample-person.png" />
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
-              <br />
-              <br />
-              <strong>- Jane Doe 5</strong>
-            </p>
-          </div>
+          <div class="navigation-arrow-right navigation-arrows"></div>
         </div>
-        <div class="navigation-arrow-right navigation-arrows"></div>
       </div>
       <div class="services-info">
         <div class="services-img"></div>
