Use the close button instead of an X for the contact-us modal close button.

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="contact-us-modal">
       <div class="contact-form">
-        <div class="contact-close"><span>X</span></div>
+         <div class="contact-close"></div>
         <div class="form">
           <p class="contact-us">CONTACT US</p>
           <input type="text" placeholder=" Name">
