Setup listing filter menus.. needs some fine-tuning.

--- a/src/about.html
+++ b/src/about.html
@@ -26,7 +26,7 @@
       <img src="images/logo.png" class="logo-upper-left"/>
       <div class="contact-us-modal">
         <div class="contact-form">
-          <div class="contact-close"><span>X</span></div>
+          <div class="contact-close"></div>
           <div class="form">
             <p>CONTACT US</p>
             <input type="text" placeholder=" Name">
