--- a/src/listing.html
+++ b/src/listing.html
@@ -26,7 +26,7 @@
     <div class="ham-menu"></div>
     <div class="contact-us-modal">
       <div class="contact-form">
-        <div class="contact-close"><span>X</span></div>
+        <div class="contact-close">></div>
         <div class="form">
           <p class="contact-us">CONTACT US</p>
           <input type="text" placeholder=" Name">
