Fine-tuning (mostly of the contact us modal)  and some TODOS added.

--- a/src/about.html
+++ b/src/about.html
@@ -61,7 +61,7 @@
               <h4>JONATHAN DOE</h4>
                <img src="images/about/agent-bio.png" class="bio-pic-mobile"/>
               <p>Licensed Real Estate Salesperson</p>
-              <p><a href="mailto:jonathan@groundsource.com">jonathan@groundsource.com</a>></p>
+              <p><a href="mailto:jonathan@groundsource.com">jonathan@groundsource.com</a></p>
               <p>M: 310.333.3333</p>
 
               <button class="rounded-red-button">WORK WITH JONATHAN</buton>
