--- a/src/listing.html
+++ b/src/listing.html
@@ -26,7 +26,7 @@
     <div class="ham-menu"></div>
     <div class="contact-us-modal">
       <div class="contact-form">
-        <div class="contact-close">></div>
+        <div class="contact-close"></div>
         <div class="form">
           <p class="contact-us">CONTACT US</p>
           <input type="text" placeholder=" Name">
@@ -50,6 +50,7 @@
       </div>
     </div>
 
+    <!-- TODO: add 1800px wide container to content -->
     <div id="container-listing" class="container-fluid">
       <img src="images/logo.png" class="logo-upper-left"/>
       <div id="header-listings" class="background-header"></div>
@@ -121,6 +122,7 @@
             <div class="info-box">
               <h2 class="title subdued">LOCATION</h2>
               <img src="images/fake-map.jpg" class="img-responsive" />
+              <!-- TODO: Real Google map -->
               <h2 class="title subdoed">FLOORPLAN</h2>
               <img src="images/fake-plans.jpg" class="img-responsive" />
             </div>
@@ -160,7 +162,7 @@
           </a>
         </div>
         <div class="column copyright">
-          COPYRIGHT &copy; GROUNDSOURCE
+          &copy; 2017 GroundSource <!-- TODO: Update copyright line -->
         </div>
       </div>
     </div>
