--- a/src/listings.html
+++ b/src/listings.html
@@ -58,6 +58,7 @@
       </div>
       <div class="content">
         <div class="header">
+          <!-- TODO: Add background of abstract building from ABOUT US -->
           <h4>LOREM IPSUM DOLOR SIT AMET</h4>
           <p>
             Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
