--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         <div class="home-intro-left">
           <div>
             <div class="section-header">
-              ABOUT <img src="images/logo.png" class="logo-small"/>
+              ABOUT <span><b>GROUND</b></span>SOURCE
             </div>
             <p>
               GROUNDSOURCE is a Los Angeles-based full-service real estate firm that specializes in representing tenants, landlords and investors. Our forty-five years of collective experience in the L.A. marketplace lets us combine extensive insider knowledge with trusted partnerships to create unparalleled value. We’re a boutique firm that offers clients the prestigious service they deserve with an intimate, hands-on approach.
@@ -152,18 +152,16 @@
           <div class="services-row">
             <div class="tennant-rep services-text">
               <div class="medium-white-text"><strong>TENNANT</strong> REPRESENTATION</div>
-              <br />
-              Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
-              <br />
-              <br />
+              <div class="service-description">
+                Effective tenant representation is based on experience and knowledge and at GROUNDSOURCE we know more about Los Angeles than anyone else -- we know the market conditions, the infrastructures, comparable deals and the people who made them. This is our city.
+              </div>
               <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
             </div>
             <div class="landlord-rep services-text">
               <div class="medium-white-text"><strong>LANDLORD</strong> REPRESENTATION</div>
-              <br />
-              We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
-              <br />
-              <br />
+              <div class="service-description">
+                We provide efficient, effective landlord representation, ensuring that each transaction is hands-on, locally informed and detail-oriented. We know the value of a broker lies in our transparent integrity and commitment to a seamless experience.
+              </div>
               <a href="#"><img src="images/learnmore_cta.png" class="learn-more"/></a>
             </div>
           </div>
