Remove listing arrows and replace them with two-border sided divs.

--- a/src/listing.html
+++ b/src/listing.html
@@ -115,8 +115,12 @@
                   <img src="images/example.jpg" class="img-responsive"/>
                   <img src="images/example.jpg" class="img-responsive"/>
                 </div>
-                <img class="gallery-arrow-left gallery-navigation" src="images/listings-arrow-lft.png" />
-                <img class="gallery-arrow-right gallery-navigation" src="images/listings-arrow-rt.png" />
+                <div class="gallery-arrow-container">
+                  <div class="gallery-arrow-left gallery-navigation"></div>
+                  <div class="gallery-arrow-right gallery-navigation"></div>
+                </div>
+                <!-- <div class="navigation-arrows2 navigation-arrow-left2"></div>
+                <div class="navigation-arrows2 navigation-arrow-right2"></div> -->
               </div>
             </div>
             <div class="info-box">
