Stop captitalizing the footer text.

--- a/src/listings.html
+++ b/src/listings.html
@@ -291,7 +291,7 @@
           </a>
         </div>
         <div class="column copyright">
-          COPYRIGHT &copy; GROUNDSOURCE
+          Copyright &copy; GroundSource
         </div>
       </div>
     </div>
