--- a/src/about.html
+++ b/src/about.html
@@ -190,7 +190,7 @@
               </a>
             </div>
             <div class="column copyright">
-              COPYRIGHT &copy; GROUNDSOURCE
+              Copyright &copy; GroundSource
             </div>
           </div>
         </div>
