--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
             </a>
           </div>
           <div class="column copyright">
-            COPYRIGHT &copy; GROUNDSOURCE
+            Copyright &copy; GroundSource
           </div>
         </div>
       </div>
